# platform.adaptation.spreadtrum.libtdm-sprd

./: configure.ac
packaging/: libtdm-sprd.spec
src/: Makefile.am  sprd_pp_7727.h  tdm_sprd.c  tdm_sprd.h  tdm_sprd_display.c  tdm_sprd_format.c  tdm_sprd_pp.c
